# rust-fibonacci-wasm

./: Cargo.toml  fibonacci.gc.wasm  index.html
src/: lib.rs
