[package]
name = "fibonacci"
version = "0.1.0"
authors = ["rocco <rocco.righi@bbc.co.uk>"]
repository = "https://github.com/bagolol/rust-fibonacci-wasm"
description = "Code used to demonstrate how to use wasm-pack"
license = "MIT/Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"

